# setka-monorepo

./: .gitignore  .pre-commit-config.yaml  ANIMATION_SYSTEM_UNIFICATION_PROPOSAL.md  BLENDER_MIGRATION_SPEC.md  CINEMON_OPEN_BLENDER_LAYOUT_ISSUE.md  CLAUDE.md  MULTI_PIP_LAYOUT_ISSUE.md  README.md  SINGLE_PATH_ADDON_SPECIFICATION.md  TODO.md  UNIFIED_ANIMATION_SYSTEM_ARCHITECTURE.md  UNIFIED_ANIMATION_SYSTEM_PLAN.md  UNIFIED_ANIMATION_TASKS.md  pyproject.toml
.github/issues/: test-isolation-metadata-obs.md
docs/: DATA_FLOW_SPECIFICATION.md  implementation-plan-issue-18.md  monorepo-migration-plan.md  monorepo-vs-submodules-comparison.md  plan.md  refactoring-spec-issue-18.md  setka-common-extraction-spec.md  setka-common-implementation-todos.md
scripts/: extract-common-code.py  migrate-to-monorepo.sh  run-package-unit-tests.sh
