[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/obsession",
    "packages/cinemon",
    "packages/medusa",
    "packages/beatrix",
]

[project]
name = "setka-workspace"
version = "1.0.0"
description = "Setka media processing and automation workspace"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.uv.sources]
setka-common = { workspace = true }
obsession = { workspace = true }
cinemon = { workspace = true }
medusa = { workspace = true }
beatrix = { workspace = true }
